<resources>
    <string name="app_name">GroupIn</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!--    for the drawer-->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- for the navigation menu-->
    <string name="nav_create_new_project">Create new Project</string>
    <string name="nav_your_projects">Your Projects</string>
    <string name="nav_your_tasks">Your Tasks</string>
    <string name="logout">Logout</string>
    <!--    for navigation header-->
    <string name="tag_line">Let\'s work together</string>
    <string name="logo_image">Logo Image</string>

    <string name="enter_projectname">Enter Project Name</string>
    <string name="add_project">Add project</string>
    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="new_project">New Project</string>
    <string name="enter_project_name">Enter Project Name</string>
    <string name="due_date_for_project">Due date for Project</string>
    <string name="start_date_for_project">Start date for project</string>
    <string name="project_name">Project Name</string>
    <string name="project_due_date">Project Due Date</string>
    <string name="project_status">Project Status</string>
    <string name="taskname">TaskName</string>
    <string name="taskdue">taskdue</string>
    <string name="taskstatus">taskstatus</string>
    <string name="taskmember">taskmember</string>
    <string name="new_task">New Task</string>
    <string name="due_date">Due Date</string>
    <string name="enter_the_task_name">Enter the task name</string>
    <string name="member_name">member name</string>
    <string name="assigned_to">Assigned to</string>
    <string name="add_task">Add Task</string>
    <string name="todo">TODO</string>

    <string-array name="statusOpt">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Complete</item>
    </string-array>
</resources>