<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProject">

    <EditText
        android:id="@+id/enter_name"
        android:layout_width="192dp"
        android:layout_height="42dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:ems="10"
        android:hint="@string/enter_project_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_p" />

    <TextView
        android:id="@+id/new_p"
        android:layout_width="199dp"
        android:layout_height="60dp"
        android:layout_marginTop="52dp"
        android:text="@string/new_project"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/pstatus"
        android:layout_width="202dp"
        android:layout_height="36dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="364dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_pstart"
        android:layout_width="158dp"
        android:layout_height="47dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/start_date_for_project"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/enter_name" />

    <EditText
        android:id="@+id/enter_pdue"
        android:layout_width="144dp"
        android:layout_height="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/due_date_for_project"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/enter_pstart" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="131dp"
        android:layout_height="34dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/start_date"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_name" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/end_date"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="78dp"
        android:layout_height="42dp"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="156dp"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="36dp"
        android:text="@string/status"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/add_p"
        android:layout_width="233dp"
        android:layout_height="73dp"
        android:layout_marginTop="360dp"
        android:text="@string/add_project"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_p" />

</androidx.constraintlayout.widget.ConstraintLayout>