<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="12dp"
        android:background="@color/cardbg"
        >

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/displaytname"
            android:textSize="25sp"
            android:textStyle="bold"
            android:text="@string/taskname"
            android:textColor="@color/headercolor"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/displaytdue"
            android:textSize="25sp"
            android:text="@string/taskdue"
            android:layout_marginTop="3dp"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/tmember"
            android:textSize="25sp"
            android:text="@string/taskmember"
            android:layout_marginTop="3dp"
            />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/sttatus"
            android:textSize="25sp"
            android:text="@string/taskstatus"
            android:layout_marginTop="3dp"
            />

    </LinearLayout>

</androidx.cardview.widget.CardView>